src/styles/main.scss
// Scroll Behavior
html {
	@apply scroll-smooth;
}

// Text Selection
::selection {
	@apply bg-dawn-pink-500 text-venus-100;
}
::-moz-selection {
	@apply bg-dawn-pink-500 text-venus-100;
}

// Sections/Footer
section {
	@apply p-4 md:p-6 lg:p-8;
}
section {
	& > div {
		@apply container mx-auto sm:max-w-md md:max-w-xl lg:max-w-3xl xl:max-w-4xl;
	}
}

// Fonts/Text
body {
	@apply font-body bg-steel-gray-50 dark:bg-gun-powder-950 transition-[background-color] text-gun-powder-900 dark:text-venus-200;
}
h1,
h2,
h3,
h4,
h5,
h6 {
	@apply font-header;
}

// Button and Links
button {
	@apply bg-clam-shell-500 text-venus-100 dark:text-gun-powder-950 border border-clam-shell-600 dark:border-clam-shell-400 py-2 px-4 rounded transition-[background-color] duration-300 ease-in-out;

	&:hover {
		@apply bg-clam-shell-600 dark:bg-clam-shell-400 border-clam-shell-500 dark:border-clam-shell-300;
	}
}

a {
	@apply text-dawn-pink-500 dark:text-dawn-pink-400 transition-colors duration-300 ease-in-out;

	&:hover {
		@apply underline text-dawn-pink-600 dark:text-dawn-pink-300;
	}
}

// Forms
input,
textarea {
	@apply bg-venus-100 dark:bg-steel-gray-700 text-gun-powder-900 dark:text-venus-200 border border-gun-powder-300 dark:border-gun-powder-600 py-2 px-4 rounded transition-colors duration-300 ease-in-out;

	&:focus {
		@apply border-dawn-pink-500 dark:border-dawn-pink-400 outline-none;
	}
}

// Rich Text
.rich-text {
	@apply text-lg;

	ul {
		@apply list-disc list-inside;
	}
}

